app/assets/stylesheets/pages.scss
#header {
	height: 10%;
	width: 100%;
	background-color: black;
}

.mega-nav {
	display: inline-block;
}

#mega-title {
	margin-right: 20%;
}

#nav-linkness {
	color: white;
	font-size: 1.5em;
	margin-left: 3%;
}

.link {
  color: white;
  font-size: 1.5em;
  margin-left: 3%;
}

#drop-pic {
	width: 100%;
	height: 30%;
}

.mission-words {
	text-align: center;
	color: #a6ddb7;
	margin-top: 50px;
}

#lilly-service {
	width: 100%;
	height: 400px;
	background-color: #a6ddb7;
}

#box-service {
	width: 100%;
	height: 400px;
	background-color: #a5a5a5;
}

#quote-home {
	padding-top: 100px;
}

#lilly-row {
	padding: 10px;
}

#lilly-row div {
	height: 170px;
	width: 170px;
	display: inline-block;
	margin: auto;
	background-color: white;
	margin-left: 8%;
}

@media only screen and (max-width: 500px) {

#lilly-row div {
	height: 100px;
	width: 300px;
}

#lilly-service {
	height: 900px;
}

#box-service {
	height: 900px;
}

}

#sample-header {
	height: 100px;
	background-color: black;
	width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;

}

#about-title {
	color: grey;
	font-family: courier;
	text-align: center;
	font-size: 1.5em;
	padding-top: 15px;
}

#white-tile {
	height: 300px;
	width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

/*#white-tile h2 {
	padding-top: 3%;
}*/

#white-tile h2, h4, p {

	color: #a6ddb7;
}

#white-tile h2 {
	font-size: 30px;
}

#white-tile h4 {
	font-size: 20px;
}


#white-tile p {
	width: 300px;
}

#grey-tile h2 {
	padding-top: 3%;
	padding-left: 15%;
	color: #a6ddb7;
}

#grey-tile h2, h4, p {


	color: #a6ddb7;
}

#grey-tile p {

	width: 300px;
}

#grey-tile {
	height: 300px;
	background-color: #f4f7f5;
	width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

#grey-tile h2 {
	font-size: 30px;
}

#grey-tile h4 {
	font-size: 20px;
}

.pics {
	height: 200px;
	width: 200px;
	margin-top: 4%;
}

#frogs {
	margin-left: 18%;
	display: inline-block;
}

#about-footer {
	height: 200px;
	background-color: #a6ddb7;
	width: 100vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

#about-footer div {
	display: inline-block;
	margin: 20px 50px
}

#about-footer div p {
	color: white;
	font-size: 1.3em;
	width: 200px;
}

#about-footer a {
	text-decoration: none;
}

#about-copyright {
	text-align: center;
	background-color: #a6ddb7;
	color: white;
}

@media only screen and (max-width: 788px) {

#white-tile {
	height: 400px;
}

#grey-tile {
	height: 400px;
}

}

@media only screen and (max-width: 910px) {

#about-footer {
	height: 320px;
}

}

@media only screen and (max-width: 604px) {

#about-footer {
	height: 450px;
}

}


#portfolio-wrapper {
	background-color: #a6ddb7;
}

